--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Secular+One&family=Poppins:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300&family=Inter:wght@300,300&display=swap');
 body{
-    background-color: #D6EEFF;
-    background-image: url("/assets/background.svg");
-    background-repeat: no-repeat;
+    background-image: linear-gradient(180deg, rgb(0, 132, 255), rgb(35, 143, 245));
     margin:0 ;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 0;
     box-sizing: border-box;
 }
@@ -13,6 +13,15 @@ body{
     padding: 0.2rem;
     /* background-color: #0890CA; */
 }
+.homepage{
+    background-image: url("/assets/background.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-bottom: 16rem;
+
+}
+
 
 .logo{
     display: inline-block;
@@ -39,7 +48,7 @@ body{
     font-family: 'Secular One', sans;
 }
 
-.other a:hover{
+.other > a:hover{
     color: #dfbb6c;
 }
 
@@ -134,5 +143,29 @@ body{
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+}
+
+.homepage-2{
+    margin: 4rem;
+    padding: 1.5rem;
+    text-align: center;
+    
+}
+
+.title-2 {
+    display: inline-block;
+    font-size: 5rem;
+    font-family: 'Secular One', sans;
+    color: #dab058;
+    text-align: center;
+    text-shadow: 5px 5px 5px red;
+
+}
+
+.para-2{
+    font-size: 2.2rem;
+    font-weight: 600;
+    color: white;
+    font-family: Poppins;
 }
 
