--- a/css/labs.css
+++ b/css/labs.css
@@ -1,15 +1,12 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
-  
+  margin: 0;
+  padding: 0;
+}
 
-
-
-.container-glass{
-    margin:5rem;
-    border-radius: 7px;
-  background-color: rgba(255, 255, 255, .2);
+.container-glass {
+  margin: 5rem;
+  border-radius: 7px;
+  background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.08);
   display: inline-block;
@@ -17,10 +14,9 @@
 .container-glass::before,
 .container-glass::after {
   border-radius: 7px;
-  background-color: rgba(255, 255, 255, .2);
+  background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.08);
-
 }
 .container-glass {
   position: relative;
@@ -30,7 +26,7 @@
 }
 .container-glass::before,
 .container-glass::after {
-  content: '';
+  content: "";
   position: absolute;
 }
 .container-glass::before {
@@ -55,7 +51,7 @@
 
 .container-glass .text {
   font-size: 1.01rem;
-  color: #DDD;
+  color: #ddd;
   margin: 2rem 0;
   text-align: justify;
 }
@@ -63,19 +59,40 @@
 .container-glass .btn {
   display: block;
   margin: auto;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-size: 1.02rem;
   width: 80%;
   max-width: 200px;
-  padding: .6rem 1rem;
+  padding: 0.6rem 1rem;
   background-color: transparent;
   border: 1px solid #ffdd00;
   border-radius: 5px;
   color: #ffdd00;
   cursor: pointer;
-  transition: all .2s linear;
+  transition: all 0.2s linear;
 }
 .container-glass .btn:hover {
   background-color: #ffdd00;
   color: #333;
+}
+.container {
+  display: flex;
+
+  justify-content: center;
+  flex-direction: row;
+}
+.labs h1 {
+  font-size: 4.5rem;
+}
+.labs a {
+  text-decoration: none;
+  color: #ddd;
+}
+#lab1 {
+  margin: 0 px;
+  display: none;
+}
+#lab2 {
+  position: relative;
+  display: none;
 }
