--- a/css/index.css
+++ b/css/index.css
@@ -166,7 +166,6 @@ body{
     font-family: 'Secular One', sans;
     color: #dab058;
     text-align: center;
-    text-shadow: 5px 5px 5px red;
 
 }
 
@@ -177,7 +176,54 @@ body{
     font-family: Poppins;
 }
 
-#lab1{
-    display: none;
+
+/* ANIMATION SECTION */
+@keyframes fadeInUp {
+    from { 
+      opacity: 0;
+      -webkit-transform: translate3d(0, 100%, 0);
+      transform: translate3d(0, 100%, 0);
+    }
+  
+    to {
+      opacity: 1;
+      -webkit-transform: none;
+      transform: none;
+    }
 }
 
+.first{
+    opacity: 0;
+    animation: fadeInUp 1s ease-in-out 0s forwards;
+}
+
+.image-section{
+    opacity: 0;
+    animation: fadeInUp 1s ease-in-out 0s forwards;
+    animation-delay: 1s;
+
+}
+
+.content{
+    opacity: 0;
+    animation: fadeInUp 1s ease-in-out 0s forwards;
+    animation-delay: 1.5s;
+
+}
+
+.hero-title{
+    opacity: 0;
+    animation: fadeInUp 1s ease-in-out 0s forwards;
+}
+.quote{
+    opacity: 0;
+    animation: fadeInUp 1s ease-in-out 0s forwards;
+    animation-delay: 1s;
+
+}
+.homepage-2{
+    opacity: 0;
+    animation: fadeInUp 1s ease-in-out 0s forwards;
+    animation-delay: 1s;
+
+}
