--- a/css/labs.css
+++ b/css/labs.css
@@ -96,3 +96,36 @@
   position: relative;
   display: none;
 }
+
+@keyframes fadeInUp {
+  from { 
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+@keyframes fadeInRight {
+  0% {
+     opacity: 0;
+     transform: translateX(90px);
+  }
+  100% {
+     opacity: 1;
+     transform: translateX(0);
+  }
+} 
+
+.container-glass{
+  opacity: 0;
+  animation: fadeInRight 1s ease-in-out 0s forwards;
+}
+
+
+
+
