--- a/css/res.css
+++ b/css/res.css
@@ -4,10 +4,14 @@ body{
     background-image: url("/assets/background.svg");
     background-repeat: no-repeat;
     /* background-size: 100% 100%;  */
-    height: 100vh;
+  
     margin:0 ;
     padding: 0;
     box-sizing: border-box;
+}
+
+.main{
+    height: 100vh;
 }
 /* Navigation bar */
 .navigation-bar{
@@ -63,14 +67,15 @@ body{
     flex-direction: column;
     /* justify-content: center; */
     align-items: center;
-    background-color: rgba(255,255,255,0.5);
+    background-color: rgba(255,255,255,0.2);
+    backdrop-filter: blur(5px);
     width: 33%;
     height: 500px;
     border-radius: 10px;
     padding: 10px;
     font-size: 32px;
     font-family: 'Secular One', sans;
-    color: #ff7b00
+    color: #eb9240
 }
 #books-header{
     margin-bottom: 15px;
