--- a/css/labs.css
+++ b/css/labs.css
@@ -1,4 +1,5 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@700&display=swap');
+*{
   margin: 0;
   padding: 0;
 }
@@ -83,18 +84,35 @@
 }
 .labs h1 {
   font-size: 4.5rem;
+  color:darkblue;
 }
 .labs a {
   text-decoration: none;
-  color: #ddd;
+  color:wheat;
 }
 #lab1 {
-  margin: 0 px;
+  font-family: 'Dongle', sans-serif;
+  font-size: 2rem;
+  margin-bottom: 7rem;
+  padding: 24px;
   display: none;
+  border: 6px solid orange;
+  border-radius: 9px;
+ 
+}
+
+.container .labs a:hover{
+ color: chocolate;
 }
 #lab2 {
+  font-family: 'Dongle', sans-serif;
+  font-size: 2rem;
+  margin-bottom: 7rem;
+  padding: 24px;
   position: relative;
   display: none;
+  border: 6px solid orange;
+  border-radius: 9px;
 }
 
 @keyframes fadeInUp {
